<resources>
    <string name="app_name">SaveForPlan(CLayout)</string>
    <string name="add_plan">Add Plan</string>
    <string name="savings_and_expenses">Savings and Expenses</string>
    <string name="view_existing_plan">View Existing Plan</string>
    <string name="save_for_plans">SAVE FOR PLANS</string>
    <string name="save_for_plans_logo">save for plans logo</string>
    <string name="back_btn_text">Back</string>
    <string name="add_plans">Add Plans</string>
    <string name="plan_name">Plan Name:</string>
    <string name="insert_plan_name">Insert plan name</string>
    <string name="total_amount">Total Amount:</string>
    <string name="amount_needed_to_achieve">Amount needed to achieve</string>
    <string name="add">Add</string>
    <string name="numeric_input_hint">0.00</string>
    <string name="save">Save</string>
    <string name="daily_expenses">Daily Expenses</string>
    <string name="edit">Edit</string>
    <string name="salary">Monthly Salary</string>
    <string name="view_plan">View Plan</string>
    <string name="clear_plans">Clear Plans</string>
</resources>