<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange">


    <ImageView
        android:id="@+id/logoImageView2"
        android:layout_width="241dp"
        android:layout_height="208dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/save_for_plans_logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/back_btn_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addPlansText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_plans"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView2" />

    <TextView
        android:id="@+id/planNameLabel"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPlansText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/plan_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPlansText" />

    <EditText
        android:id="@+id/planNameEditText"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/addPlansText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@id/planNameLabel"
        android:hint="@string/insert_plan_name"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planNameLabel" />

    <TextView
        android:id="@+id/totalAmountLabel"
        android:layout_width="163dp"
        android:layout_height="36dp"
        android:layout_below="@id/planNameEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/total_amount"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planNameEditText" />

    <EditText
        android:id="@+id/totalAmountEditText"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/planNameEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@id/totalAmountLabel"
        android:hint="@string/amount_needed_to_achieve"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountLabel" />

    <Button
        android:id="@+id/addPlanButton"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalAmountEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>