<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange">

    <TextView
        android:id="@+id/view_plan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_plan"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/back_btn_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="241dp"
        android:layout_height="208dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/save_for_plans_logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_clearplan"
        android:layout_width="156dp"
        android:layout_height="64dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:text="@string/clear_plans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plansContainer" />

    <LinearLayout
        android:id="@+id/plansContainer"
        android:layout_width="280dp"
        android:layout_height="220dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_plan_title"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>