<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange">

    <ImageView
        android:id="@+id/logoImageView3"
        android:layout_width="241dp"
        android:layout_height="208dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/save_for_plans_logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/back_btn_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/savings_expenses_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/savings_and_expenses"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView3" />

    <TextView
        android:id="@+id/savings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/savings_expenses_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="168dp"
        android:layout_marginTop="24dp"
        android:text="@string/savings"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savings_expenses_title" />

    <EditText
        android:id="@+id/input_savings"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_below="@id/savings_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:text="@string/numeric_input_hint"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savings_text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/input_expenses"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_below="@id/savings_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:text="@string/numeric_input_hint"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_expenses_text" />

    <TextView
        android:id="@+id/daily_expenses_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@+id/savings_text"
        android:text="@string/daily_expenses"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_savings" />

    <Button
        android:id="@+id/btnSaveAmountSavings"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_below="@+id/savings_expenses_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="38dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_expenses" />


</androidx.constraintlayout.widget.ConstraintLayout>